--- a/templates/docbook-article.xml
+++ b/templates/docbook-article.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook V3.1//EN"> -->
-<article>
+<article xmlns="http://docbook.org/ns/docbook">
 <artheader>
   <title>My Article</title>
   <author><honorific>Dr</honorific><firstname>Emilio</firstname>
