--- a/templates/docbook-book.xml
+++ b/templates/docbook-book.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook V3.1//EN">
-<book>
+<book xmlns="http://docbook.org/ns/docbook">
 <bookinfo>
   <title>My First Book</title>
   <author><firstname>Jane</firstname><surname>Doe</surname></author>
