--- a/templates/docbook-dinbrief.xml
+++ b/templates/docbook-dinbrief.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<dinbrief>
+<dinbrief xmlns="http://docbook.org/ns/docbook">
 	<author>
 		<personname></personname>
 		<address>
