--- a/templates/docbook-refpage.xml
+++ b/templates/docbook-refpage.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook V3.1//EN">
-<refentry id="printf">
+<refentry id="printf"  xmlns="http://docbook.org/ns/docbook">
 
 <refmeta>
 <refentrytitle>printf</refentrytitle>
