--- a/templates/docbook-slides.xml
+++ b/templates/docbook-slides.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE slides PUBLIC "-//Norman Walsh//DTD Slides XML V2.0//EN"
-                 "./slides.dtd">
+<!-- <!DOCTYPE slides PUBLIC "-//Norman Walsh//DTD Slides XML V2.0//EN"
+                 "./slides.dtd"> -->
 
-<slides>
+<slides  xmlns="http://docbook.org/ns/docbook">
 
   <slidesinfo>
     <title>DocBook <emphasis>slides</emphasis> Example</title>
